--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,26 @@
-<div class="jumbotron">
+<!-- <div class="jumbotron">
     <h1>This is header not body !!!</h1>
-</div>
+</div> -->
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark ">
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a href="" class="nav-link">Home</a>
+            <a href="/" class="nav-link">Home</a>
+        </li>
+        <li *ngIf="auth.checkRole()==='student'">
+            <a class="nav-link" routerLink="/student">Student</a>
+        </li>
+        <li *ngIf="auth.checkRole()==='staff'">
+            <a class="nav-link" routerLink="/staff">Staff</a>
+        </li>
+        <li *ngIf="auth.checkRole()==='tutor'">
+            <a class="nav-link" routerLink="/tutor">Tutor</a>
         </li>
         <li *ngIf="auth.isLoggedIn()" class="nav-item">
-            <a class="nav-link" routerLink="/list">List Student</a>
+            <a class="nav-link" routerLink="/list">Contact us</a>
         </li>
         <li *ngIf="auth.isLoggedIn()" class="nav-item">
-            <a class="nav-link" routerLink="/">List Tutor</a>
+            <a class="nav-link" routerLink="/">About</a>
         </li>
     </ul>
     <ul class="navbar-nav ml-auto">
